--- a/.gitignore
+++ b/.gitignore
@@ -58,5 +58,5 @@ report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 /generated/prisma
 
 src/database/prisma/generated/
-/calma-ai/venv/
+/calma-ai/calma/
 /calma-ai/app/__pycache__
