--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "ai:start": "cd calma-ai-service && python -m app.main",
+    "ai:health": "curl -s http://localhost:8000/health | python3 -m json.tool",
+    "dev": "./start-dev.sh",
+    "calma": "./start-calma.sh",
+    "integration:test": "node test-integration.js"
   },
   "dependencies": {
     "@nestjs/axios": "^4.0.1",
